--- a/index.html
+++ b/index.html
@@ -1,3 +1,19 @@
 <!DOCTYPE html>
-<h1> Odin Recipes</h1>
-<a href="recipres/making.html">Making Cassava</a>
+<html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Recipes</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <h1>Odin Recipes</h1>
+
+  <ul>
+    <li><a href="recipres/making.html">Making Cassava</a></li>
+  </ul>
+</body>
+
+</html>
